--- a/Test02/Views/KeToan/DSCongnoNo.cshtml
+++ b/Test02/Views/KeToan/DSCongnoNo.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Test02.Models.PhieuCongNo>
+﻿@model IEnumerable<Test02.Models.sp_LocPhieuCongNo_Result>
 
 @using Test02.Models;
 @{
