--- a/Test02/Views/QTV/ChinhsuaNV.cshtml
+++ b/Test02/Views/QTV/ChinhsuaNV.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div class="tile" style="margin:10px 20px;">
-    <h3 class="tile-title">THÊM TÀI KHOẢN NHÂN VIÊN </h3>
+    <h3 class="tile-title">CẬP NHẬT TÀI KHOẢN NHÂN VIÊN </h3>
     <div class="tile-body contenner" style="padding-top:10px">
         
         <form class="row" method="post" enctype="multipart/form-data" action="/QTV/ChinhsuaNV">
