--- a/Test02/Views/QTV/Layout/LayoutQTV.cshtml
+++ b/Test02/Views/QTV/Layout/LayoutQTV.cshtml
@@ -61,8 +61,14 @@
                 </a>
             </li>
             <li>
+                <a class="app-menu__item @ViewBag.tq" href="~/QTV/HomePage">
+                    <i class='app-menu__icon bx bx-tachometer @ViewBag.hieuung1'></i>
+                    <span class="app-menu__label">Tổng quan</span>
+                </a>
+            </li>
+            <li>
                 <a class="app-menu__item @ViewBag.qtnv" href="~/QTV/QLNhanvien">
-                    <i class='app-menu__icon bx bx-tachometer'></i>
+                    <i class='app-menu__icon bx bx-user-voice'></i>
                     <span class="app-menu__label">Quản lý nhân viên</span>
                 </a>
             </li>
