--- a/Test02/Views/QTV/ThemNV.cshtml
+++ b/Test02/Views/QTV/ThemNV.cshtml
@@ -91,7 +91,7 @@
                     </div>
                     <div class="form-group col-md-6">
                         <strong>Xác nhân password</strong>
-                        <input class="form-control" type="text" id="pass2" name="typepassword" required="required" onchange="PassCheck()"  type = "password" />
+                        <input class="form-control"  id="pass2" name="typepassword" required="required" onchange="PassCheck()"  type = "password" />
                         <span id="checkpass"></span>
 
 
