--- a/Test02/Views/GiaoHang/DanhSachCacChuyenGiao.cshtml
+++ b/Test02/Views/GiaoHang/DanhSachCacChuyenGiao.cshtml
@@ -50,7 +50,7 @@
                                                 @Html.DisplayFor(modelItem => item.MaGH)
                                             </td>
                                             <td>
-                                                @{var tendnv = db.NhanVienGHs.Where(s => s.MaGH == item.MaGH).FirstOrDefault();}
+                                                @{var tendnv = db.NhanVienGHs.Where(s => s.MaNV == item.MaNVLap).FirstOrDefault();}
                                                 @Html.DisplayFor(modelItem => tendnv.TenNV)
                                             </td>
 
