--- a/Test02/Views/KeToan/DSDaiLy.cshtml
+++ b/Test02/Views/KeToan/DSDaiLy.cshtml
@@ -30,7 +30,7 @@
             <script>
                 swal({
                     title: "Lỗi  !!!!",
-                    icon: "erroe",
+                    icon: "error",
                     button: "Thoát",
                 });
 
