--- a/Test02/Views/GiaoHang/ChiTietChuyenGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ChiTietChuyenGiaoHang.cshtml
@@ -35,7 +35,7 @@
                                     <span>
                                         @{var gh = db.DonHangs.Where(s => s.MaGH == item.MaGH).FirstOrDefault();
                                             var macg = db.ChuyenGiaos.Where(s => s.MaGH == gh.MaGH).FirstOrDefault();
-                                          }
+                                        }
                                     </span>
                                 </p>
 
@@ -82,13 +82,13 @@
                                     @foreach (var item in Model)
                                     {
                                         @*<p style="text-align:center">
-                                            <span>
-                                                @{
-                                                    var macg = db.ChuyenGiaos.Where(s => s.MaGH == item.MaGH).FirstOrDefault();
-                                                    var donhang1 = db.DonHangs.Where(s => s.MaGH == macg.MaGH).FirstOrDefault();
-                                                }
-                                            </span>
-                                        </p>*@
+                                                <span>
+                                                    @{
+                                                        var macg = db.ChuyenGiaos.Where(s => s.MaGH == item.MaGH).FirstOrDefault();
+                                                        var donhang1 = db.DonHangs.Where(s => s.MaGH == macg.MaGH).FirstOrDefault();
+                                                    }
+                                                </span>
+                                            </p>*@
                                         <tr>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.MaDH)
@@ -170,14 +170,16 @@
                     <div style="margin:7px;">
                         @foreach (var item in Model)
                         {
-                            if (item.TrangThai == "Chờ giao")
+                            var cg = db.ChuyenGiaos.Where(s => s.MaGH == item.MaGH).FirstOrDefault();
+                            if (cg.TrangThai == "Chờ giao")
+                            {
+                                <a class="btn btn-warning" type="button" title="update " href="~/GiaoHang/ChinhSuaChuyenGiao/@TempData["magh01"]"><i class=""></i>Cập nhật trạng thái</a> }
+                            else if (cg.TrangThai == "Đang giao")
+                            {
+                                <a class="btn btn-warning" type="button" title="update " href="~/GiaoHang/ChinhSuaChuyenGiao/@TempData["magh01"]"><i class=""></i>Cập nhật trạng thái</a>}
+                            else if (cg.TrangThai == "Đã giao")
                             {
 
-                                <a class="btn btn-warning" type="button" title="update " href="~/GiaoHang/ChinhSuaChuyenGiao/@TempData["magh01"]"><i class=""></i>Cập nhật trạng thái</a>
-                            }
-                            else if (item.TrangThai == "Đang giao")
-                            {
-                                <a class="btn btn-warning" type="button" title="update " href="~/GiaoHang/ChinhSuaChuyenGiao/@TempData["magh01"]"><i class=""></i>Cập nhật trạng thái</a>
                             }
                             break;
                         }
